--- a/my-portfolio/src/App.css
+++ b/my-portfolio/src/App.css
@@ -21,11 +21,11 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: rgb(white);
 }
 
 .App-link {
-  color: #61dafb;
+  color: #2500f8;
 }
 
 @keyframes App-logo-spin {
